docs/4.x/rds_cluster_role_association.md
---
permalink: /rds_cluster_role_association/
---

# rds_cluster_role_association

`rds_cluster_role_association` represents the `aws_rds_cluster_role_association` Terraform resource.



This package contains functions and utilities for setting up the resource using Jsonnet code.


## Index

* [`fn new()`](#fn-new)
* [`fn newAttrs()`](#fn-newattrs)
* [`fn withDbClusterIdentifier()`](#fn-withdbclusteridentifier)
* [`fn withFeatureName()`](#fn-withfeaturename)
* [`fn withRoleArn()`](#fn-withrolearn)

## Fields

### fn new

```ts
new()
```


`aws.rds_cluster_role_association.new` injects a new `aws_rds_cluster_role_association` Terraform `resource`
block into the root module document.

Additionally, this inserts a private function into the `_ref` attribute that generates references to attributes of the
resource. For example, if you added a new instance to the root using:

    # arguments omitted for brevity
    aws.rds_cluster_role_association.new('some_id')

You can get the reference to the `id` field of the created `aws.rds_cluster_role_association` using the reference:

    $._ref.aws_rds_cluster_role_association.some_id.get('id')

This is the same as directly entering `"${ aws_rds_cluster_role_association.some_id.id }"` as the value.

NOTE: if you are chaining multiple resources together in a merge operation, you may not be able to use `super`, `self`,
or `$` to refer to the root object. Instead, make an explicit outer object using `local`.

**Args**:
  - `resourceLabel` (`string`): The name label of the block.
  - `db_cluster_identifier` (`string`): Set the `db_cluster_identifier` field on the resulting resource block.
  - `feature_name` (`string`): Set the `feature_name` field on the resulting resource block.
  - `role_arn` (`string`): Set the `role_arn` field on the resulting resource block.

**Returns**:
- A mixin object that injects the new resource into the root Terraform configuration.


### fn newAttrs

```ts
newAttrs()
```


`aws.rds_cluster_role_association.newAttrs` constructs a new object with attributes and blocks configured for the `rds_cluster_role_association`
Terraform resource.

Unlike [aws.rds_cluster_role_association.new](#fn-new), this function will not inject the `resource`
block into the root Terraform document. Instead, this must be passed in as the `attrs` argument for the
[tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) function to build a complete block.

This is most useful when you need to preprocess the attributes with functions, conditional, or looping logic prior to
injecting into a complete block.

**Args**:
  - `db_cluster_identifier` (`string`): Set the `db_cluster_identifier` field on the resulting object.
  - `feature_name` (`string`): Set the `feature_name` field on the resulting object.
  - `role_arn` (`string`): Set the `role_arn` field on the resulting object.

**Returns**:
  - An attribute object that can be used with [tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) to construct a new `rds_cluster_role_association` resource into the root Terraform configuration.


### fn withDbClusterIdentifier

```ts
withDbClusterIdentifier()
```

`aws.string.withDbClusterIdentifier` constructs a mixin object that can be merged into the `string`
Terraform resource block to set or update the db_cluster_identifier field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`string`): The value to set for the `db_cluster_identifier` field.


### fn withFeatureName

```ts
withFeatureName()
```

`aws.string.withFeatureName` constructs a mixin object that can be merged into the `string`
Terraform resource block to set or update the feature_name field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`string`): The value to set for the `feature_name` field.


### fn withRoleArn

```ts
withRoleArn()
```

`aws.string.withRoleArn` constructs a mixin object that can be merged into the `string`
Terraform resource block to set or update the role_arn field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`string`): The value to set for the `role_arn` field.
